fixed on mobile (760px)

--- a/asset.css
+++ b/asset.css
@@ -23,7 +23,8 @@ body {
   font-family: "Poppins", sans-serif;
   letter-spacing: -0.4000000059604645px;
   text-align: left;
-  width: 100vw;
+  /* width: 100vw; */
+  overflow-x: hidden;
 }
 
 ul {
